tests/semantic/valid/77_i9_method_mutual_infer.hulk
type C {
    a(x) => self.b(x);
    b(x) => x + 1;
}
let c = new C() in print(c.a(1));
